Use \terminal for `export`

--- a/specs/language/declarations.tex
+++ b/specs/language/declarations.tex
@@ -52,7 +52,7 @@
 
 \begin{grammar}
   \define{function-specifier}\br
-  export
+  \terminal{export}
 \end{grammar}
 
 \p The \texttt{export} specifier denotes that the function has program linkage (\ref{Basic.Linkage.Program}).
